--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 
-spring.application.name=config-client
+spring.application.name=config-client1
 
 spring.h2.console.enabled=true
 spring.datasource.platform=h2
